--- a/week7/bk.css
+++ b/week7/bk.css
@@ -2,6 +2,11 @@
     padding: 0;
     margin:0;
 } */
+@media screen and (max-width: 400px) {
+    .features{
+        background: red;
+    }
+}
 body {
     background: gray;
 }
