--- a/期中/css/puzzle-cell.css
+++ b/期中/css/puzzle-cell.css
@@ -41,15 +41,15 @@ body {
     color: teal;
     text-align: center;
     /*文字居中*/
-    font-size: 80px;
+    font-size: 60px;
     line-height: 150px;
     cursor: pointer;
     transition: 0.3s;
 }
 
 #board div:hover {
-    color: coral;
-    font-size: 150px;
+    color: rgb(206, 45, 45);
+    font-size: 140px;
     /* <!--字体放大效果--> */
 }
 
