--- a/期中/css/puzzle-bk.css
+++ b/期中/css/puzzle-bk.css
@@ -16,7 +16,8 @@ header{
 footer{
     position:relative;
     text-align: center;
-    margin-bottom: 100%;
+    /* margin-bottom: 100%; */
+    bottom:0;
     
 }
 h1{
@@ -54,4 +55,7 @@ li:hover{
     background-color: #ddd;
     color: black;
     text-decoration: underline;
+}
+button:hover{
+    background-color: aquamarine;
 }
